tests/baselines/reference/genericAssignmentCompatOfFunctionSignatures1.errors.txt
==== tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts (2 errors) ====
    var x1 = function foo3<T, U extends { a: T; b: string }>(x: T, z: U) { }
                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! genericAssignmentCompatOfFunctionSignatures1.ts(1,27): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var x2 = function foo3<T, U extends { a: T; b: number }>(x: T, z: U) { }
                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! genericAssignmentCompatOfFunctionSignatures1.ts(2,27): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    
    x1 = x2;
    x2 = x1;